Add datasource resource
